@@ -1,3 +1,7 @@
+2005-10-02  Benhur Stein <benhur@inf.ufsm.br>
+        * SpaceTimeViewer/DrawView+Drawing.m: new drawing code for events with
+          support for aggregates.
+
 2005-10-01  Benhur Stein <benhur@inf.ufsm.br>
         * SpaceTimeViewer/DrawView+Drawing.m: new drawing code for states with
           support for aggregates.
